INCOMPATIBLE: feature application by apply_cube_{prune,grow,grow_coarse} are modified:
	      If two candidates share the same score, we prefer those closer to the left-upper-corner.
INCOMPATIBLE: Use of murmur3 for hash functions. This will not break the compatibility with the "indexed, binary" files, but
	      may affect the ordering of words, features attributes etc.

2013-1-9
Bugfix: throw when disk is full + added --temporary option to extract_score in order to assingn temporary directory
	from command line.

2013-1-7
INCOMPATIBLE: ngram feature computes "exact" score when prefixed by <s> during upper bound estimates
Faster and less-memory kbest loading in learn/oracle/mert/convex_hull

2013-1-4
Bugfix: removed spurious "locking" by "not" checking malloced resources very frequently
Revised the kbest loading in learn/oracle/mert/convex_hull code

2012-12-29
INCOMPATIBLE: The bleuS metric is completely a sentence-wise metric, and document-wise scoring is performed by
	      simple averaging.
Bugfix: merge counts when large # of count files are extracted
Bugfix: better parallelization of counts extraction

2012-12-20
New: support L1 regularization for xBLEU
Bugfix: Use of a rather conventional backtracking line search strategy, not the strategy of the original LBFGS
	to avoid line-search failure

2012-12-19
New: faster MapReduce for mpi-based phrase/scfg/ghkm/tree-based extraction

2012-12-5
New: added IBM Model 4 training. Now, Model 1 -> HMM -> Model 4 training is the default.

2012-11-27
Bugfix: kbest-based (mert) learner/oracle computer core dump!
	The reason is the incorrect hash value computation for compact-feature-vector.
INCOMPATIBLE: The feature-vector is re-implemented by a privately implemented compact-hashtable.
	      Thus, the element is not "sorted" but randomly inserted in the vector.
	      The compact-hashtable is inspired by the dense-hash-map, but differ in that empty/deleted items are
	      specified by "template."