@@ -5,6 +5,8 @@ INCOMPATIBLE: feature application by apply_cube_{prune,grow,grow_coarse} are mod
 	      If two candidates share the same score, we prefer those closer to the left-upper-corner.
 INCOMPATIBLE: Use of murmur3 for hash functions. This will not break the compatibility with the "indexed, binary" files, but
 	      may affect the ordering of words, features attributes etc.
+New: added cicada_filter_normalize which can perform normalization, i.e. NFKC and remove controls etc. with support
+     colorization of Katakana, katakana-marks and symbols
 
 2013-1-9
 Bugfix: throw when disk is full + added --temporary option to extract_score in order to assingn temporary directory
